--- a/area/principal.html
+++ b/area/principal.html
@@ -301,6 +301,24 @@
       100% { transform: rotate(360deg); }
     }
 
+	  .logout-button1 {
+      position: fixed;
+      top: 20px;
+      right: 100px;
+      padding: 10px 20px;
+      background: #ff4757;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      font-size: 14px;
+      z-index: 100;
+    }	
+
+    .logout-button1:hover {
+      background: #ff3742;
+    }
+
   </style>
 </head>
 <body>
@@ -311,6 +329,10 @@
 
   <!-- Botão de Logout -->
   <button id="logoutBtn" class="logout-btn">Sair</button>
+
+	<button class="logout-button1" onclick="window.location.href='../index.html'">
+  Voltar
+</button>
   
   <img src="img/Luzdaarea.png" width="864" height="150" style="margin-bottom: 30px;">
   
@@ -582,4 +604,5 @@
     }
   </script>
 </body>
+
 </html>
