Fix HTML structure and restore content

--- a/area/index.html
+++ b/area/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
@@ -262,7 +262,7 @@
   <script>
     // Configuração do Firebase
     const firebaseConfig = {
- apiKey: "AIzaSyDK6BihUGbjJAUCog5ar10xrLIEoW3DrpU",
+    apiKey: "AIzaSyDK6BihUGbjJAUCog5ar10xrLIEoW3DrpU",
   authDomain: "luzdaarea.firebaseapp.com",
   databaseURL: "https://luzdaarea-default-rtdb.firebaseio.com",
   projectId: "luzdaarea",
@@ -509,5 +509,4 @@
     });
   </script>
 </body>
-
 </html>
