--- a/principal.html
+++ b/principal.html
@@ -137,8 +137,8 @@
 	
 	/* Nova classe para os botões da seção de páginas */
 .pagina-botao {
-    width: 150px; /* Largura fixa */
-    height: 40px; /* Altura fixa */
+    width: 150px;
+    height: 40px;
     padding: 30px 95px;
     background: #033;
     color: white;
@@ -154,13 +154,27 @@
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-    transition: all 0.3s ease;
+    transition: all 0.15s ease;
+    box-shadow: 
+        0 6px 0 #022,
+        0 0 0 2px white;
+    position: relative;
 }
 
 .pagina-botao:hover {
     background: rgba(255, 255, 255, 0.3);
-    transform: scale(1.05);
+    transform: translateY(6px);
+    box-shadow: 
+        0 0 0 #022,
+        0 0 0 2px white;
 }
+
+.pagina-botao:active {
+    transform: translateY(6px) scale(0.98);
+    transition: all 0.1s ease;
+}
+
+
     .status-button {
       width: 380px;
       height: 160px;
