Atualizar o principal.html

--- a/principal.html
+++ b/principal.html
@@ -420,7 +420,8 @@
     .pagina {
       width: 880px;
       max-width: 1820px;
-      background: linear-gradient(135deg, #ff7a00 0%, #000000 100%);
+      background: linear-gradient(135deg, #00b33c 0%, #000000 100%);
+
       padding: 30px;
       border-radius: 12px;
       margin: 1px 0;
