Atualizar o principal.html

--- a/principal.html
+++ b/principal.html
@@ -141,7 +141,7 @@
         width: 150px;
         height: 40px;
         padding: 30px 95px;
-        background: #033;
+        background: #C0C0C0;
         color: white;
         border: none;
         border-radius: 5px;
