Atualizar o principal.html

--- a/principal.html
+++ b/principal.html
@@ -142,7 +142,7 @@
         height: 40px;
         padding: 30px 95px;
         background: #C0C0C0;
-        color: white;
+        color: black;
         border: none;
         border-radius: 5px;
         cursor: pointer;
