--- a/principal.html
+++ b/principal.html
@@ -141,12 +141,13 @@
         width: 150px;
         height: 40px;
         padding: 30px 95px;
-        background: #C0C0C0;
-        color: black;
+        background: #036;
+        color:#FFF;
         border: none;
         border-radius: 5px;
         cursor: pointer;
-        font-size: 25px;
+        font-size: 30px;
+		font-weight: 900; /* negrito */
         margin: 5px;
         display: inline-flex;
         align-items: center;
@@ -420,7 +421,7 @@
     .pagina {
       width: 880px;
       max-width: 1820px;
-      background: linear-gradient(135deg, #00b33c 0%, #000000 100%);
+     background: linear-gradient(90deg,rgba(78, 78, 87, 1) 0%, rgba(100, 100, 135, 1) 22%, rgba(139, 193, 204, 1) 100%);
 
       padding: 30px;
       border-radius: 12px;
