Update print statement from 'Hello' to 'Goodbye'

--- a/principal.html
+++ b/principal.html
@@ -493,7 +493,7 @@
       Inversor
     </button>
 
-    <button class="pagina-botao" onclick="window.location.href='../index.html'">
+    <button class="pagina-botao" onclick="window.location.href='computador/index.html'">
       Computador
     </button>
 
@@ -850,3 +850,4 @@
     
 
       
+
