Update print statement from 'Hello' to 'Goodbye'

--- a/principal.html
+++ b/principal.html
@@ -497,7 +497,7 @@
       Computador
     </button>
 
-    <button class="pagina-botao" onclick="window.location.href='../index.html'">
+    <button class="pagina-botao" onclick="window.location.href='sala/index.html'">
       TV Sala
     </button>
 
@@ -850,4 +850,5 @@
     
 
       
+
 
