--- a/principal.html
+++ b/principal.html
@@ -842,6 +842,11 @@
       }
       setInterval(atualizarRelogio, 1000);
     }
+
+	  var senha = prompt("Digite a senha:");
+  if(senha !== "mariano75"){
+    document.body.innerHTML = "<h2>Acesso negado</h2>";
+  }
   </script>
 </body>
 </html> 
@@ -850,5 +855,6 @@
     
 
       
+
 
 
