Atualizar o principal.html

--- a/principal.html
+++ b/principal.html
@@ -500,14 +500,14 @@ Tutorial
     // Configuração do Firebase
     const firebaseConfig = {
     // 🔧 Substitua por suas credenciais
-  apiKey: "AIzaSyDK6BihUGbjJAUCog5ar10xrLIEoW3DrpU",
-  authDomain: "luzdaarea.firebaseapp.com",
-  databaseURL: "https://luzdaarea-default-rtdb.firebaseio.com",
-  projectId: "luzdaarea",
-  storageBucket: "luzdaarea.firebasestorage.app",
-  messagingSenderId: "176018884427",
-  appId: "1:176018884427:web:2ad49bf76602f505830ace",
-  measurementId: "G-8PX143ZRBZ"
+         apiKey: "AIzaSyAIRUVzpMW2sHSE3TyDBCYsQqNatjzl7OE",
+  authDomain: "portao-85a3c.firebaseapp.com",
+  databaseURL: "https://portao-85a3c-default-rtdb.firebaseio.com",
+  projectId: "portao-85a3c",
+  storageBucket: "portao-85a3c.firebasestorage.app",
+  messagingSenderId: "364450852654",
+  appId: "1:364450852654:web:f9fbe5db3d2d76eff6d4bf",
+  measurementId: "G-8JD6STQ59P"
     };
 
     // Inicializar Firebase
